# zero-trust-netwoking

./: .gitignore  Caddyfile  README.md  ansible.cfg  bootstrap.sh  install.sh  package.json
.github/workflows/: validate.yml
agent/: agent.py  client.py
agent/collectors/: __init__.py  network_stats.py  security_events.py
control-plane/: .env.example  config.py  main.py  pyproject.toml  schemas.py
control-plane/api/: __init__.py
control-plane/api/v1/: __init__.py  admin.py  agent.py  client.py  endpoints.py
control-plane/core/: __init__.py  client_manager.py  ipam.py  node_manager.py  policy_engine.py  trust_engine.py  user_policy_manager.py  wireguard_service.py
control-plane/database/: __init__.py  models.py  session.py
control-plane/schemas/: __init__.py  base.py  config.py  node.py  policy.py
docs/: NIST.SP.800-207.md  P2P_Mesh_Diagram.drawio  README.MD  WIREGUARD_MESH.md
docs/chat/: 2026-12-26.md  2026-12-26_18h14m.md  2026-12-26_22h00m.md  2026-12-26_23h00m.md  2026-12-27_00h00m.md  2026-12-27_14h20.md  2026-12-27_16h00.md
docs/issues/: Cải thiện kiến trúc Zero Trust.md  Mở rộng hỗ trợ Mobile - Laptop Client.md  Zero Trust Network - Docker vs Native.md
infrastructure/ansible/: README.md  ansible.cfg  site.yml
inventory/: hosts.ini  hosts.ini.example
playbooks/: add-wireguard-peer.yml  setup-control-plane.yml  setup-local.yml  setup-wireguard.yml  setup-worker-node.yml  site.yml
scripts/: add-peer-to-hub.sh  init-config.sh  install-agent.sh  install.sh  quick-peer-setup.sh  ztctl
tests/: uninstall.sh
web-ui/: README.md
(+75 files in other folders)
